Fix spacing around h2 in prose docs

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -179,7 +179,7 @@
   }
 
   & p {
-    @apply leading-[1.65rem];
+    @apply leading-[1.65rem] mb-4;
   }
 
   & p:not(:first-child) {
